@@ -39,6 +39,9 @@ struct _Elm_Fileselector_Smart_Data
    Eina_List               *filter_list;
    Elm_Fileselector_Filter *current_filter;
 
+   /* a list of selected paths. only for multi selection */
+   Eina_List               *paths;
+
    const char              *path;
    const char              *selection;
    Ecore_Idler             *populate_idler;
@@ -54,6 +57,13 @@ struct _Elm_Fileselector_Smart_Data
    Eina_Bool             only_folder : 1;
    Eina_Bool             expand : 1;
    Eina_Bool             double_tap_navigation : 1;
+   Eina_Bool             multi : 1;
+
+   /* this flag is only for multi selection.
+    * If this flag is set to EINA_TRUE, it means directory is selected
+    * so that fileselector will clear current selection when user clicked
+    * another item. */
+   Eina_Bool             dir_selected : 1;
 };
 
 struct sel_data
