@@ -97,6 +97,7 @@ Additions:
    * Add the configuration fileselector_double_tap_navigation_enable.
    * Add "activated" smart callback for fileselector.
    * Add elm_object_item_signal_emit support in hoversel. This works only when the item is created.
+   * Add elm_fileselector_multi_select_set/get() and elm_fileselector_selected_paths_get to support multi-selection.
 
 Improvements:
 
